--- a/093_eval3/Makefile
+++ b/093_eval3/Makefile
@@ -1,29 +1,10 @@
-cyoa-step4: cyoa-step4.o cyoa4.o
-	g++ -o cyoa-step4 -ggdb3 cyoa-step4.o cyoa4.o
-cyoa-step3: cyoa-step3.o cyoa3.o
-	g++ -o cyoa-step3 -ggdb3 cyoa-step3.o cyoa3.o
-cyoa-step2: cyoa-step2.o cyoa2.o
-	g++ -o cyoa-step2 -ggdb3 cyoa-step2.o cyoa2.o
-cyoa-step1: cyoa-step1.o cyoa.o
-	g++ -o cyoa-step1 -ggdb3 cyoa-step1.o cyoa.o
-cyoa.o: cyoa.cpp cyoa.hpp
-	g++ -std=gnu++98 -pedantic -Wall -Werror -ggdb3 -c cyoa.cpp
-cyoa2.o: cyoa2.cpp cyoa2.hpp
-	g++ -std=gnu++98 -pedantic -Wall -Werror -ggdb3 -c cyoa2.cpp
-cyoa3.o: cyoa3.cpp cyoa3.hpp
-	g++ -std=gnu++98 -pedantic -Wall -Werror -ggdb3 -c cyoa3.cpp
-cyoa4.o: cyoa4.cpp cyoa4.hpp
-	g++ -std=gnu++98 -pedantic -Wall -Werror -ggdb3 -c cyoa4.cpp
-
-cyoa-step1.o:cyoa.cpp cyoa.hpp cyoa-step1.cpp
-	g++ -std=gnu++98 -pedantic -Wall -Werror -ggdb3 -c cyoa-step1.cpp
-cyoa-step2.o:cyoa2.cpp cyoa2.hpp cyoa-step2.cpp
-	g++ -std=gnu++98 -pedantic -Wall -Werror -ggdb3 -c cyoa-step2.cpp
-cyoa-step3.o:cyoa3.cpp cyoa3.hpp cyoa-step3.cpp
-	g++ -std=gnu++98 -pedantic -Wall -Werror -ggdb3 -c cyoa-step3.cpp
-
-cyoa-step4.o:cyoa4.cpp cyoa4.hpp cyoa-step4.cpp
-	g++ -std=gnu++98 -pedantic -Wall -Werror -ggdb3 -c cyoa-step4.cpp
-
+cyoa-step1:cyoa-step1.cpp cyoa1.hpp
+	g++ -o cyoa-step1 -Wall -Werror -std=gnu++98 cyoa-step1.cpp cyoa1.cpp
+cyoa-step2:cyoa-step2.cpp cyoa.hpp
+	g++ -o cyoa-step2 -Wall -Werror -std=gnu++98 cyoa-step2.cpp cyoa.cpp
+cyoa-step3:cyoa-step3.cpp cyoa.hpp
+	g++ -o cyoa-step3 -Wall -Werror -std=gnu++98 cyoa-step3.cpp cyoa.cpp
+cyoa-step4:cyoa-step4.cpp cyoa.hpp
+	g++ -o cyoa-step4 -Wall -Werror -std=gnu++98 cyoa-step4.cpp cyoa.cpp
 clean:
 	rm -f *~ *.o cyoa-step1 cyoa-step2 cyoa-step3  cyoa-step4
