--- a/093_eval3/Makefile
+++ b/093_eval3/Makefile
@@ -1,9 +1,9 @@
-#cyoa-step1:cyoa-step1.cpp cyoa1.hpp
-#	g++ -o cyoa-step1 -Wall -Werror -std=gnu++98 cyoa-step1.cpp cyoa1.cpp
-#cyoa-step2:cyoa-step2.cpp cyoa.hpp
-#	g++ -o cyoa-step2 -Wall -Werror -std=gnu++98 cyoa-step2.cpp cyoa.cpp
-#cyoa-step3:cyoa-step3.cpp cyoa.hpp
-#	g++ -o cyoa-step3 -Wall -Werror -std=gnu++98 cyoa-step3.cpp cyoa.cpp
+cyoa-step1:cyoa-step1.cpp cyoa1.hpp
+	g++ -o cyoa-step1 -Wall -Werror -std=gnu++98 cyoa-step1.cpp cyoa1.cpp
+cyoa-step2:cyoa-step2.cpp cyoa.hpp
+	g++ -o cyoa-step2 -Wall -Werror -std=gnu++98 cyoa-step2.cpp cyoa.cpp
+cyoa-step3:cyoa-step3.cpp cyoa.hpp
+	g++ -o cyoa-step3 -Wall -Werror -std=gnu++98 cyoa-step3.cpp cyoa.cpp
 cyoa-step4:cyoa-step4.cpp cyoa.hpp
 	g++ -o cyoa-step4 -Wall -Werror -std=gnu++98 cyoa-step4.cpp cyoa.cpp
 clean:
